tests/NormalTests/paczka1/small_fuzzy/96559389.err
Error in line 4: KHN3EeVYy27 S816 98,6
Error in line 11: izu S816 35,4
